Update openAPI
Remove query endpoints
Add notebooks/{notebookUUID}/notes endpoint
Add pagination and update sort
