# api/openapi/api.yaml
@@ -44,6 +44,10 @@ paths:
   /notebooks:
     get:
       operationId: getNotebooks
+      parameters:
+        - $ref: "#/components/parameters/Sort"
+        - $ref: "#/components/parameters/PageSize"
+        - $ref: "#/components/parameters/Page"
       responses:
         "200":
           description: notebooks sucessfully fetched
@@ -74,28 +78,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-  /notebooks/query:
-    post:
-      operationId: queryNotebooks
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/NotebooksQuery"
-      responses:
-        "200":
-          description: notebooks successfully queried
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Notebooks"
-        default:
-          description: unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
+
   /notebooks/{notebookUUID}:
     get:
       operationId: getNotebook
@@ -134,7 +117,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-
     delete:
       operationId: deleteNotebook
       parameters:
@@ -149,9 +131,35 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
+  /notebooks/{notebookUUID}/notes:
+    get:
+      operationId: getNotebookNotes
+      parameters:
+        - $ref: "#/components/parameters/NotebookID"
+        - $ref: "#/components/parameters/Sort"
+        - $ref: "#/components/parameters/PageSize"
+        - $ref: "#/components/parameters/Page"
+      responses:
+        "200":
+          description: notebook's notes suffessfully fetched
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Notes"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
   /notes:
     get:
       operationId: getNotes
+      parameters:
+        - $ref: "#/components/parameters/Sort"
+        - $ref: "#/components/parameters/PageSize"
+        - $ref: "#/components/parameters/Page"
       responses:
         "200":
           description: notes successfully fetched
@@ -177,28 +185,6 @@ paths:
       responses:
         "201":
           description: TODO
-        default:
-          description: unexpected error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-  /notes/query:
-    post:
-      operationId: queryNotes
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/NotesQuery"
-      responses:
-        "200":
-          description: notes successfully queried
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Notes"
         default:
           description: unexpected error
           content:
@@ -361,9 +347,6 @@ components:
     PatchNotebook:
       $ref: "#/components/schemas/NotebookBase"
 
-    NotebooksQuery:
-      $ref: "#/components/schemas/Query"
-
     NoteBase:
       type: object
       properties:
@@ -439,9 +422,6 @@ components:
     PatchNote:
       $ref: "#/components/schemas/NoteBase"
 
-    NotesQuery:
-      $ref: "#/components/schemas/Query"
-
     Icon:
       description: represents a single icon model
       $ref: "#/components/schemas/Emoji"
@@ -452,136 +432,6 @@ components:
         emoji:
           type: string
       required: [emoji]
-
-    Query:
-      description: represents object containing filters and sorts
-      type: object
-      properties:
-        filter:
-          $ref: "#/components/schemas/Filter"
-        sorts:
-          type: array
-          items:
-            $ref: "#/components/schemas/Sort"
-      required: [sorts]
-
-    Filter:
-      description: represents a single filter or a compound filter
-      oneOf:
-        - $ref: "#/components/schemas/FilterItem"
-        - $ref: "#/components/schemas/CompoundFilter"
-      discriminator:
-        propertyName: type
-        mapping:
-          compoundFilter: "#/components/schemas/CompoundFilter"
-          simpleFilter: "#/components/schemas/FilterItem"
-
-    CompoundFilter:
-      type: object
-      properties:
-        type:
-          type: string
-        operator:
-          type: string
-          enum:
-            - and
-            - or
-        filters:
-          type: array
-          minItems: 1
-          items:
-            $ref: "#/components/schemas/FilterItem"
-      required:
-        - type
-        - operator
-        - filters
-
-    FilterItem:
-      allOf:
-        - properties:
-            type:
-              type: string
-            property:
-              type: string
-          required:
-            - type
-            - property
-        - oneOf:
-            - $ref: "#/components/schemas/TextFilter"
-
-    TextFilter:
-      type: object
-      properties:
-        text:
-          oneOf:
-            - $ref: "#/components/schemas/IsEmpty"
-            - $ref: "#/components/schemas/IsNotEmpty"
-            - $ref: "#/components/schemas/Contains"
-          discriminator:
-            propertyName: operation
-            mapping:
-              isEmpty: "#/components/schemas/IsEmpty"
-              isNotEmpty: "#/components/schemas/IsNotEmpty"
-              contains: "#/components/schemas/Contains"
-              equals: "#/components/schemas/Equals"
-
-    IsEmpty:
-      type: object
-      properties:
-        operation:
-          type: string
-        isEmpty:
-          type: boolean
-      required: 
-        - isEmpty
-        - operation
-
-    IsNotEmpty:
-      type: object
-      properties:
-        operation:
-          type: string
-        isNotEmpty:
-          type: boolean
-      required: 
-        - isNotEmpty
-        - operation
-
-    Contains:
-      type: object
-      properties:
-        operation:
-          type: string
-        contains:
-          type: string
-      required: 
-        - contains
-        - operation
-
-    Equals:
-      type: object
-      properties:
-        operation:
-          type: string
-        equals:
-          type: string
-      required: 
-        - equals
-        - operation
-
-    Sort:
-      type: object
-      properties:
-        property:
-          type: string
-        direction:
-          type: string
-          enum:
-            - ascending
-            - descending
-      required:
-        - property
-        - direction
 
     GetPresignedUploadURL:
       type: object
@@ -659,3 +509,24 @@ components:
       schema:
         type: string
         format: uuid
+
+    Sort:
+      name: sort
+      in: query
+      description: represents a sort query parameter
+      schema:
+        type: string
+
+    PageSize:
+      name: pageSize
+      in: query
+      description: represents a page size query parameter
+      schema:
+        type: integer
+
+    Page:
+      name: page
+      in: query
+      description: represents an page number query parameter
+      schema:
+        type: integer
